Bug 332792 - With one or more items in a folder cut, the gray/faint effect applied to their icons stays in the same position (hopping to other files) when doing a sort operation
Summary: With one or more items in a folder cut, the gray/faint effect applied to thei...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 4.12.4
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-30 04:14 UTC by kdebugs
Modified: 2014-04-14 20:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.5
Sentry Crash Report:


Attachments
video clip of the problem (164.09 KB, video/ogg)
2014-03-30 04:16 UTC, kdebugs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kdebugs 2014-03-30 04:14:52 UTC
Strange but true.  Two ogv files in a folder - both created by the same program within minutes of each other.  One shows up with a colorless icon.  The other shows with the normal green.  Press the "Type" heading to sort by type - now they're both green.  Press to sort by name - back as before with different icon colors.

This was stable enough to add/remove some files in that folder and I closed and opened dolphin again several times with the same effect.  Since I restarted the computer, I haven't been able to reproduce it.

I'll post a clip of it.

Reproducible: Sometimes
Comment 1 kdebugs 2014-03-30 04:16:33 UTC
Created attachment 85836 [details]
video clip of the problem
Comment 2 Frank Reininghaus 2014-04-09 13:12:15 UTC
Thanks for the bug report! This looks strange indeed. One idea: Could it be that you "cut" the file "kate-offset-click.ogv" before you started recording the video?
Comment 3 kdebugs 2014-04-09 15:55:03 UTC
(In reply to comment #2)
> Thanks for the bug report! This looks strange indeed. One idea: Could it be
> that you "cut" the file "kate-offset-click.ogv" before you started recording
> the video?

Ah, yeah.  I didn't know I had, but I must have cut one of the files (not necessarily the .ogv) because that's how to reproduce it!  I didn't even notice the hidden file changing color because it was light gray already, but if you look at the video closely, you can see it.  To be clear, I am NOT doing any cutting _during_ the video clip.  All you see is the effect of changing the sort mode.

So the description should be: With one or more items in a folder cut, the gray/faint effect applied to their icons stays in the same position (hopping to other files) when doing a sort operation.

Reproducible: Always

Steps to reproduce:
1) Using any view mode, sorted alphabetically, in a folder with two files ('A' and 'B'), cut 'A'.
2) Reverse the sort order.

Actual results:
 'B' appears cut and 'A' normal.
Expected results:
 'A' should appear cut and 'B' normal.
Comment 4 Frank Reininghaus 2014-04-09 16:15:04 UTC
Thanks for the quick reply! It's good that we know the cause of the problem now. A suggested fix is at https://git.reviewboard.kde.org/r/117451/
Comment 5 Frank Reininghaus 2014-04-14 20:56:46 UTC
Git commit 80833d2c0b92c14552b142bd64c1cadce43d26a8 by Frank Reininghaus.
Committed on 14/04/2014 at 20:46.
Pushed by freininghaus into branch 'KDE/4.12'.

Update the "is cut" state of items if necessary

The icons of items which are "cut" are shown faded in the view. The
"is cut" state of the widget representing an item is updated if the
clipboard contents change. Before this commit, if the sort order was
changed however, then each widget kept the "is cut" state of the item
which had been shown previously at its position.

The solution is to update the "is cut" state also if any of the
widget's data change.
REVIEW: 117451
FIXED-IN: 4.12.5

M  +6    -0    dolphin/src/kitemviews/kstandarditemlistwidget.cpp

http://commits.kde.org/kde-baseapps/80833d2c0b92c14552b142bd64c1cadce43d26a8